Error on dark mode solved

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -406,7 +406,7 @@ b, strong {
 		}
 	}
 	small{
-		color: $small-color !important;
+		color: $text-white !important;
 	}
 
 	.modal-content{
