--- a/sass/tictactoe.scss
+++ b/sass/tictactoe.scss
@@ -26,11 +26,11 @@ h1 {
 }
 
 .dark-mode {
-    .board, .cells, #cronometro {
+    .board, .cells {
         border: 1px solid $white;
     }
 
-    .container {
+    .container, #cronometro {
         color: $white;
     }
 }
